* Curve: The profile summary wasn't properly aligned on some browsers (profile.css) [Bug 3043]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8537 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/profile.css
+++ b/Themes/curve/css/profile.css
@@ -10,8 +10,7 @@ h3.titlebg
 
 dl
 {
-	overflow: hidden;
-	height: 0.1%;
+	overflow: auto;
 	margin: 0;
 	padding: 0;
 }
@@ -82,7 +81,6 @@ dl
 {
 	clear: both;
 	overflow: auto;
-	height: 0.1%;
 	margin: 0 0 18px 0;
 	padding: 0 0 15px 0;
 	border-bottom: 1px #ccc solid;
